--- a/examples/jupyter_example.ipynb
+++ b/examples/jupyter_example.ipynb
@@ -39,7 +39,9 @@
    "source": [
     "import os\n",
     "from decanter import core\n",
-    "from decanter.core.core_api import TrainInput, PredictInput"
+    "from decanter.core.core_api import TrainInput, PredictInput\n",
+    "from decanter.core.enums.algorithms import Algos as Alg\n",
+    "from decanter.core.enums.evaluators import Evaluator as Eva"
    ]
   },
   {
@@ -127,8 +129,8 @@
     "# train_data = DataUpload.create(data_id = \"{data_id}\", name=\"train_data\")\n",
     "\n",
     "# set train parameters train model\n",
-    "train_input = TrainInput(data=train_data, target='Survived', algos=[\"XGBoost\"], max_model=2, tolerance=0.9)\n",
-    "exp = client.train(train_input=train_input, select_model_by='mean_per_class_error', name='myexp')\n",
+    "train_input = TrainInput(data=train_data, target='Survived', algos=[Alg.XGBoost], max_model=2, tolerance=0.9)\n",
+    "exp = client.train(train_input=train_input, select_model_by=Eva.mean_per_class_error, name='myexp')\n",
     "\n",
     "# set predict parameters and predict result\n",
     "predict_input = PredictInput(data=test_data, experiment=exp)\n",
@@ -179,7 +181,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "core.plot.show_model_attr(metric='mean_per_class_error', score_types=['validation', 'cv_averages'], exp=exp)"
+    "core.plot.show_model_attr(metric=Eva.mean_per_class_error, score_types=['validation', 'cv_averages'], exp=exp)"
    ]
   },
   {
@@ -236,9 +238,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py37",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "py37"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -250,7 +252,59 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
+  },
+  "nbTranslate": {
+   "displayLangs": [
+    "*"
+   ],
+   "hotkey": "alt-t",
+   "langInMainMenu": true,
+   "sourceLang": "en",
+   "targetLang": "fr",
+   "useGoogleTranslate": true
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
