--- a/examples/jupyter_jobs_handle_example.ipynb
+++ b/examples/jupyter_jobs_handle_example.ipynb
@@ -20,7 +20,9 @@
     "from decanter import core\n",
     "from decanter.core.core_api import TrainInput, PredictInput\n",
     "from decanter.core.jobs import DataUpload, Experiment\n",
-    "from decanter.core.extra import CoreStatus"
+    "from decanter.core.extra import CoreStatus\n",
+    "from decanter.core.enums.algorithms import Algos as Alg\n",
+    "from decanter.core.enums.evaluators import Evaluator as Eva"
    ]
   },
   {
@@ -129,8 +131,8 @@
     "train_data = client.upload(file=train_file, name='train_data')\n",
     "test_data = client.upload(file=test_file, name='test_data')\n",
     "\n",
-    "train_input = TrainInput(data=train_data, target='Survived', algos=['XGBoost'], max_model=2, tolerance=0.9)\n",
-    "exp = client.train(train_input=train_input, select_model_by='auc', name='exp(data_failed)')\n",
+    "train_input = TrainInput(data=train_data, target='Survived', algos=[Alg.XGBoost], max_model=2, tolerance=0.9)\n",
+    "exp = client.train(train_input=train_input, select_model_by=Eva.auc, name='exp(data_failed)')\n",
     "\n",
     "predict_input = PredictInput(data=test_data, experiment=exp)\n",
     "\n",
@@ -164,11 +166,11 @@
     "train_file = open(train_file_path , 'r')\n",
     "\n",
     "train_data = client.upload(file=train_file, name='train_data')\n",
-    "train_input = TrainInput(data=train_data, target='Survived', algos=['XGBoost'], max_model=2, tolerance=0.9)\n",
+    "train_input = TrainInput(data=train_data, target='Survived', algos=[Alg.XGBoost], max_model=2, tolerance=0.9)\n",
     "\n",
     "exps = []\n",
     "for i in range(5):\n",
-    "    exp = client.train(train_input=train_input, select_model_by='auc', name='exp_%d' % i)\n",
+    "    exp = client.train(train_input=train_input, select_model_by=Eva.auc, name='exp_%d' % i)\n",
     "    exps.append(exp)\n",
     "\n",
     "time.sleep(4)\n",
@@ -209,11 +211,11 @@
     "\n",
     "train_data = client.upload(file=train_file, name='train_data')\n",
     "\n",
-    "train_input = TrainInput(data=train_data, target='Survived', algos=['XGBoost'], max_model=2, tolerance=0.9)\n",
+    "train_input = TrainInput(data=train_data, target='Survived', algos=[Alg.XGBoost], max_model=2, tolerance=0.9)\n",
     "\n",
     "exps = []\n",
     "for i in range(5):\n",
-    "    exp = client.train(train_input=train_input, select_model_by='auc', name='exp_%d' % i)\n",
+    "    exp = client.train(train_input=train_input, select_model_by=Eva.auc, name='exp_%d' % i)\n",
     "    exps.append(exp)\n",
     "\n",
     "async def stop():\n",
@@ -238,9 +240,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py37",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "py37"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -252,7 +254,59 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
+  },
+  "nbTranslate": {
+   "displayLangs": [
+    "*"
+   ],
+   "hotkey": "alt-t",
+   "langInMainMenu": true,
+   "sourceLang": "en",
+   "targetLang": "fr",
+   "useGoogleTranslate": true
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
+  },
+  "varInspector": {
+   "cols": {
+    "lenName": 16,
+    "lenType": 16,
+    "lenVar": 40
+   },
+   "kernels_config": {
+    "python": {
+     "delete_cmd_postfix": "",
+     "delete_cmd_prefix": "del ",
+     "library": "var_list.py",
+     "varRefreshCmd": "print(var_dic_list())"
+    },
+    "r": {
+     "delete_cmd_postfix": ") ",
+     "delete_cmd_prefix": "rm(",
+     "library": "var_list.r",
+     "varRefreshCmd": "cat(var_dic_list()) "
+    }
+   },
+   "types_to_exclude": [
+    "module",
+    "function",
+    "builtin_function_or_method",
+    "instance",
+    "_Feature"
+   ],
+   "window_display": false
   }
  },
  "nbformat": 4,
