[FEATURE] Subtask - No longer need to create context with create function

--- a/examples/jupyter_example.ipynb
+++ b/examples/jupyter_example.ipynb
@@ -87,7 +87,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client = core.CoreClient()"
+    "# set the username, password, host\n",
+    "client = core.CoreClient(username='{usr}', password='{pwd}', host='{decantercoreserver}')"
    ]
   },
   {
@@ -95,16 +96,6 @@
    "metadata": {},
    "source": [
     "Note: It is ok to recreate context to set the usr, pwd, host."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# set the username, password, host\n",
-    "client.create(username='{usr}', password='{pwd}', host='{decantercoreserver}')"
    ]
   },
   {
