--- a/examples/jupyter_jobs_handle_example.ipynb
+++ b/examples/jupyter_jobs_handle_example.ipynb
@@ -32,11 +32,9 @@
     "core.enable_default_logger()\n",
     "\n",
     "# The Main object handles the calling of Decanter's API.\n",
-    "client = core.CoreClient()\n",
-    "\n",
     "# Create connection to Decanter server, and set up basic settings.\n",
     "# set the username, password, host\n",
-    "client.create(username='{usr}', password='{pwd}', host='{decantercoreserver}')"
+    "client = core.CoreClient(username='{usr}', password='{pwd}', host='{decantercoreserver}')"
    ]
   },
   {
