--- a/examples/jupyter_example.ipynb
+++ b/examples/jupyter_example.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,13 +33,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "from decanter import core\n",
-    "from decanter.core.core_api import TrainInput, PredictInput"
+    "from decanter.core.core_api import TrainInput, PredictInput\n",
+    "from decanter.core.enums.algorithms import Algo\n",
+    "from decanter.core.enums.evaluators import Evaluator"
    ]
   },
   {
@@ -125,8 +127,8 @@
     "# train_data = DataUpload.create(data_id = \"{data_id}\", name=\"train_data\")\n",
     "\n",
     "# set train parameters train model\n",
-    "train_input = TrainInput(data=train_data, target='Survived', algos=[\"XGBoost\"], max_model=2, tolerance=0.9)\n",
-    "exp = client.train(train_input=train_input, select_model_by='mean_per_class_error', name='myexp')\n",
+    "train_input = TrainInput(data=train_data, target='Survived', algos=[Algo.XGBoost], max_model=2, tolerance=0.9)\n",
+    "exp = client.train(train_input=train_input, select_model_by=Evaluator.mean_per_class_error, name='myexp')\n",
     "\n",
     "# set predict parameters and predict result\n",
     "predict_input = PredictInput(data=test_data, experiment=exp)\n",
@@ -177,7 +179,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "core.plot.show_model_attr(metric='mean_per_class_error', score_types=['validation', 'cv_averages'], exp=exp)"
+    "core.plot.show_model_attr(metric=Evaluator.mean_per_class_error, score_types=['validation', 'cv_averages'], exp=exp)"
    ]
   },
   {
