--- a/examples/jupyter_jobs_handle_example.ipynb
+++ b/examples/jupyter_jobs_handle_example.ipynb
@@ -20,7 +20,9 @@
     "from decanter import core\n",
     "from decanter.core.core_api import TrainInput, PredictInput\n",
     "from decanter.core.jobs import DataUpload, Experiment\n",
-    "from decanter.core.extra import CoreStatus"
+    "from decanter.core.extra import CoreStatus\n",
+    "from decanter.core.enums.algorithms import Algo\n",
+    "from decanter.core.enums.evaluators import Evaluator"
    ]
   },
   {
@@ -130,8 +132,8 @@
     "train_data = client.upload(file=train_file, name='train_data')\n",
     "test_data = client.upload(file=test_file, name='test_data')\n",
     "\n",
-    "train_input = TrainInput(data=train_data, target='Survived', algos=['XGBoost'], max_model=2, tolerance=0.9)\n",
-    "exp = client.train(train_input=train_input, select_model_by='auc', name='exp(data_failed)')\n",
+    "train_input = TrainInput(data=train_data, target='Survived', algos=[Algo.XGBoost], max_model=2, tolerance=0.9)\n",
+    "exp = client.train(train_input=train_input, select_model_by=Evaluator.auc, name='exp(data_failed)')\n",
     "\n",
     "predict_input = PredictInput(data=test_data, experiment=exp)\n",
     "\n",
@@ -165,11 +167,11 @@
     "train_file = open(train_file_path , 'r')\n",
     "\n",
     "train_data = client.upload(file=train_file, name='train_data')\n",
-    "train_input = TrainInput(data=train_data, target='Survived', algos=['XGBoost'], max_model=2, tolerance=0.9)\n",
+    "train_input = TrainInput(data=train_data, target='Survived', algos=[Algo.XGBoost], max_model=2, tolerance=0.9)\n",
     "\n",
     "exps = []\n",
     "for i in range(5):\n",
-    "    exp = client.train(train_input=train_input, select_model_by='auc', name='exp_%d' % i)\n",
+    "    exp = client.train(train_input=train_input, select_model_by=Evaluator.auc, name='exp_%d' % i)\n",
     "    exps.append(exp)\n",
     "\n",
     "time.sleep(4)\n",
@@ -210,11 +212,11 @@
     "\n",
     "train_data = client.upload(file=train_file, name='train_data')\n",
     "\n",
-    "train_input = TrainInput(data=train_data, target='Survived', algos=['XGBoost'], max_model=2, tolerance=0.9)\n",
+    "train_input = TrainInput(data=train_data, target='Survived', algos=[Algo.XGBoost], max_model=2, tolerance=0.9)\n",
     "\n",
     "exps = []\n",
     "for i in range(5):\n",
-    "    exp = client.train(train_input=train_input, select_model_by='auc', name='exp_%d' % i)\n",
+    "    exp = client.train(train_input=train_input, select_model_by=Evaluator.auc, name='exp_%d' % i)\n",
     "    exps.append(exp)\n",
     "\n",
     "async def stop():\n",
