[FEATURE] Update Document & Code Comment

--- a/examples/jupyter_example.ipynb
+++ b/examples/jupyter_example.ipynb
@@ -126,6 +126,21 @@
     "# from decanter.core.jobs import DataUpload\n",
     "# train_data = DataUpload.create(data_id = \"{data_id}\", name=\"train_data\")\n",
     "\n",
+    "# Set up data to change data type.\n",
+    "train_data = client.setup(\n",
+    "    train_data=train_data\n",
+    "    data_source={\n",
+    "        'uri': test_data.accessor['uri'],\n",
+    "        'format': 'csv'\n",
+    "        },\n",
+    "    data_id=test_data.id,\n",
+    "    data_columns=[ \n",
+    "        {\n",
+    "            'id': 'Pclass',\n",
+    "            'data_type': 'categorical'\n",
+    "        }],\n",
+    "    name='mysetup')\n",
+    "    \n",
     "# set train parameters train model\n",
     "train_input = TrainInput(data=train_data, target='Survived', algos=[Algo.XGBoost], max_model=2, tolerance=0.9)\n",
     "exp = client.train(train_input=train_input, select_model_by=Evaluator.mean_per_class_error, name='myexp')\n",
