--- a/examples/jupyter_jobs_handle_example.ipynb
+++ b/examples/jupyter_jobs_handle_example.ipynb
@@ -132,6 +132,20 @@
     "train_data = client.upload(file=train_file, name='train_data')\n",
     "test_data = client.upload(file=test_file, name='test_data')\n",
     "\n",
+    "train_data = client.setup(\n",
+    "    train_data=train_data,\n",
+    "    data_source={\n",
+    "        'uri': test_data.accessor['uri'],\n",
+    "        'format': 'csv'\n",
+    "        },\n",
+    "    data_id=test_data.id,\n",
+    "    data_columns=[ \n",
+    "        {\n",
+    "            'id': 'Pclass',\n",
+    "            'data_type': 'categorical'\n",
+    "        }],\n",
+    "    name='mysetup')\n",
+    "    \n",
     "train_input = TrainInput(data=train_data, target='Survived', algos=[Algo.XGBoost], max_model=2, tolerance=0.9)\n",
     "exp = client.train(train_input=train_input, select_model_by=Evaluator.auc, name='exp(data_failed)')\n",
     "\n",
