--- a/examples/jupyter_example.ipynb
+++ b/examples/jupyter_example.ipynb
@@ -90,7 +90,7 @@
    "outputs": [],
    "source": [
     "# set the username, password, host\n",
-    "client = core.CoreClient(username='{usr}', password='{pwd}', host='{decantercoreserver}')"
+    "client = core.CoreClient(username='{usr}', password='{pwd}', host='{host:port}')"
    ]
   },
   {
