[FEATURE] Update Documents & README

--- a/examples/jupyter_example.ipynb
+++ b/examples/jupyter_example.ipynb
@@ -90,7 +90,7 @@
    "outputs": [],
    "source": [
     "# set the username, password, host\n",
-    "client = core.CoreClient(username='{usr}', password='{pwd}', host='{host:port}')"
+    "client = core.CoreClient(username='gp', password='gp-admin', host='http://localhost:3000')"
    ]
   },
   {
@@ -115,8 +115,8 @@
    "outputs": [],
    "source": [
     "# open train & test file\n",
-    "train_file_path = os.path.join('{train_file_path}')\n",
-    "test_file_path = os.path.join('{test_file_path}')\n",
+    "train_file_path = os.path.join('/data/train.csv')\n",
+    "test_file_path = os.path.join('/data/test.csv')\n",
     "train_file = open(train_file_path , 'r')\n",
     "test_file = open(test_file_path , 'r')\n",
     "\n",
