--- a/examples/jupyter_jobs_handle_example.ipynb
+++ b/examples/jupyter_jobs_handle_example.ipynb
@@ -36,7 +36,7 @@
     "# The Main object handles the calling of Decanter's API.\n",
     "# Create connection to Decanter server, and set up basic settings.\n",
     "# set the username, password, host\n",
-    "client = core.CoreClient(username='{usr}', password='{pwd}', host='{host:port}')"
+    "client = core.CoreClient(username='gp', password='gp-admin', host='http://localhost:3000')"
    ]
   },
   {
@@ -45,8 +45,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_file_path = os.path.join('{train_file_path}')\n",
-    "test_file_path = os.path.join('{test_file_path}')\n",
+    "train_file_path = '/data/train.csv'\n",
+    "test_file_path = '/data/test.csv'\n",
     "train_file = open(train_file_path , 'r')\n",
     "test_file = open(test_file_path , 'r')"
    ]
