[FEATURE] Update Comments

--- a/examples/jupyter_example.ipynb
+++ b/examples/jupyter_example.ipynb
@@ -101,7 +101,7 @@
    "outputs": [],
    "source": [
     "# set the username, password, host\n",
-    "client = core.CoreClient(username='gp', password='gp-admin', host='http://host:port')"
+    "client = core.CoreClient(username='gp', password='gp-admin', host='http://localhost:3000')"
    ]
   },
   {
@@ -132,8 +132,8 @@
     "test_file = open(test_file_path , 'r')\n",
     "\n",
     "# upload data to corex \n",
-    "train_data = client.upload(file=train_file, name=\"train_data\")\n",
-    "test_data = client.upload(file=test_file, name=\"test_data\")\n",
+    "train_data = client.upload(file=train_file, name=\"train_data\", name='upload_train_data')\n",
+    "test_data = client.upload(file=test_file, name=\"test_data\", name='upload_train_data')\n",
     "# from decanter.core.jobs import DataUpload\n",
     "# train_data = DataUpload.create(data_id = \"{data_id}\", name=\"train_data\")\n",
     "\n",
