[Bugfix] setup data (#29)
* [BUGFIX] setup data

-> Fix setup data task and job doesn't complete

Signed-off-by: Noctis Hong <Noctis.Hong@icloud.com>

* [FEATURE] Fix SetupTask issue & Update Document

* [FEATURE] Update Comments

* [bugfix] Update Comments

Co-authored-by: Noctis Hong <Noctis.Hong@icloud.com>
Co-authored-by: Kenyo <kenyo3023@gmail.com>

--- a/src/jupyter_jobs_handle_example.ipynb
+++ b/src/jupyter_jobs_handle_example.ipynb
@@ -36,7 +36,7 @@
     "# The Main object handles the calling of Decanter's API.\n",
     "# Create connection to Decanter server, and set up basic settings.\n",
     "# set the username, password, host\n",
-    "client = core.CoreClient(username='gp', password='gp-admin', host='http://localhost:3000')"
+    "client = core.CoreClient(username='gp', password='gp-admin', host='http://host:port')"
    ]
   },
   {
@@ -129,8 +129,8 @@
     "train_file = open(train_file_path , 'r')\n",
     "test_file = open(test_file_path, 'r')\n",
     "\n",
-    "train_data = client.upload(file=train_file, name='upload_train_data')\n",
-    "test_data = client.upload(file=test_file, name='upload_test_data')\n",
+    "train_data = client.upload(file=train_file, name='train_data')\n",
+    "test_data = client.upload(file=test_file, name='test_data')\n",
     "\n",
     "setup_input = SetupInput(\n",
     "        data = train_data,\n",
@@ -179,7 +179,7 @@
    "source": [
     "train_file = open(train_file_path , 'r')\n",
     "\n",
-    "train_data = client.upload(file=train_file, name='upload_train_data')\n",
+    "train_data = client.upload(file=train_file, name='train_data')\n",
     "train_input = TrainInput(data=train_data, target='Survived', algos=[Algo.XGBoost], max_model=2, tolerance=0.9)\n",
     "\n",
     "exps = []\n",
@@ -223,7 +223,7 @@
    "source": [
     "train_file = open(train_file_path , 'r')\n",
     "\n",
-    "train_data = client.upload(file=train_file, name='upload_train_data')\n",
+    "train_data = client.upload(file=train_file, name='train_data')\n",
     "\n",
     "train_input = TrainInput(data=train_data, target='Survived', algos=[Algo.XGBoost], max_model=2, tolerance=0.9)\n",
     "\n",
