--- a/examples/jupyter_example.ipynb
+++ b/examples/jupyter_example.ipynb
@@ -126,8 +126,8 @@
    "outputs": [],
    "source": [
     "# open train & test file\n",
-    "train_file_path = os.path.join('/data/train.csv')\n",
-    "test_file_path = os.path.join('/data/train.csv')\n",
+    "train_file_path = os.path.join('data/train.csv')\n",
+    "test_file_path = os.path.join('data/train.csv')\n",
     "train_file = open(train_file_path , 'r')\n",
     "test_file = open(test_file_path , 'r')\n",
     "\n",
