--- a/examples/jupyter_jobs_handle_example.ipynb
+++ b/examples/jupyter_jobs_handle_example.ipynb
@@ -45,8 +45,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_file_path = '/data/train.csv'\n",
-    "test_file_path = '/data/test.csv'\n",
+    "train_file_path = 'data/train.csv'\n",
+    "test_file_path = 'data/test.csv'\n",
     "train_file = open(train_file_path , 'r')\n",
     "test_file = open(test_file_path , 'r')"
    ]
