changed back to localhost

--- a/examples/jupyter_example.ipynb
+++ b/examples/jupyter_example.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
        "True"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,12 +96,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "17:48:07 [    INFO] [Context] no event loop to close\n",
+      "17:48:07 [    INFO] [Context] connect healthy :)\n"
+     ]
+    }
+   ],
    "source": [
     "# set the username, password, host\n",
-    "client = core.CoreClient(username='gp', password='gp-admin', host='http://localhost:3000')"
+    "client = core.CoreClient(username='gp', password='gp-admin', host='http://192.168.2.6:2999')"
    ]
   },
   {
@@ -121,9 +130,130 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<_UnixSelectorEventLoop running=True closed=False debug=False>\n",
+      "<coroutine object Job.get at 0x120603ec0>\n",
+      "<coroutine object Model.get at 0x120603ec0>\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-5-864a2e0e7700>:31: RuntimeWarning: coroutine 'Job.get' was never awaited\n",
+      "  print(exp.get(attr='attributes')) # wait until train step is over\n",
+      "RuntimeWarning: Enable tracemalloc to get the object allocation traceback\n",
+      "<ipython-input-5-864a2e0e7700>:32: RuntimeWarning: coroutine 'Model.get' was never awaited\n",
+      "  print(exp.best_model.get(attr='importances'))\n",
+      "RuntimeWarning: Enable tracemalloc to get the object allocation traceback\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "31801286cd8a4182b1772c694e2fa8b6",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(HTML(value='Progress upload_train_data'), FloatProgress(value=0.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "fea439b98aa744a48265aa0e0d5319b5",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(HTML(value='Progress upload_train_data'), FloatProgress(value=0.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "17:48:35 [    INFO] [Job] 'upload_train_data' done status: done id: 602108da8dafdf0001fc90d5\n",
+      "17:48:35 [    INFO] [Job] 'upload_train_data' done status: done id: 602108da8dafdf0001fc90e4\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "42c49a2ea61f4d7bb15ba9dbb1aeb915",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(HTML(value='Progress None'), FloatProgress(value=0.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "17:48:39 [    INFO] [Job] 'DataSetup_c878a8db' done status: done id: 602108f48dafdf0001fc91a1\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "54e390f266c4404eb6a3eb3fd54c9df0",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(HTML(value='Progress myexp'), FloatProgress(value=0.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "17:48:54 [    INFO] [Job] 'myexp' done status: done id: 602108fae9b1d60001aa01b5\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f443defc00664faf85b4927ebb40fbb0",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(HTML(value='Progress mypred'), FloatProgress(value=0.0), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "17:49:27 [    INFO] [Job] 'mypred' done status: done id: 602109098dafdf00013c4f83\n"
+     ]
+    }
+   ],
    "source": [
     "# open train & test file\n",
     "train_file_path = os.path.join('data/train.csv')\n",
@@ -132,8 +262,8 @@
     "test_file = open(test_file_path , 'r')\n",
     "\n",
     "# upload data to corex \n",
-    "train_data = client.upload(file=train_file, name=\"train_data\", name='upload_train_data')\n",
-    "test_data = client.upload(file=test_file, name=\"test_data\", name='upload_train_data')\n",
+    "train_data = client.upload(file=train_file, name='upload_train_data')\n",
+    "test_data = client.upload(file=test_file, name='upload_train_data')\n",
     "# from decanter.core.jobs import DataUpload\n",
     "# train_data = DataUpload.create(data_id = \"{data_id}\", name=\"train_data\")\n",
     "\n",
@@ -154,21 +284,13 @@
     "train_input = TrainInput(data=train_data, target='Survived', algos=[Algo.XGBoost], max_model=2, tolerance=0.9)\n",
     "exp = client.train(train_input=train_input, select_model_by=Evaluator.mean_per_class_error, name='myexp')\n",
     "\n",
+    "print(loop)\n",
+    "print(exp.get(attr='attributes')) # wait until train step is over\n",
+    "print(exp.best_model.get(attr='importances'))\n",
+    "\n",
     "# # set predict parameters and predict result\n",
     "predict_input = PredictInput(data=test_data, experiment=exp)\n",
     "pred_res = client.predict(predict_input=predict_input, name='mypred')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# To prevent getting attributes when corresponding jobs aren't finished\n",
-    "exp.get(attr='attributes')\n",
-    "exp.best_model.get(attr='importances')\n",
-    "pred_res.get(attr='schema')"
    ]
   },
   {
@@ -182,9 +304,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'xgb2': {'model_id': '6020cbb7e9b1d60001aa019c', 'cv_averages': {'auc': 0.8523980940000001, 'mean_per_class_error': 0.19392495199999998, 'logloss': 0.4495279200000001, 'misclassification': 0.182424902, 'lift_top_group': 2.3412321}, 'validation_scores': {'auc': 0.7821276595744681, 'mean_per_class_error': 0.22382978723404257, 'logloss': 0.5256533821586573, 'misclassification': 0.19444444444444445, 'lift_top_group': 2.88}, 'feature_explanations': []}, 'xgb1': {'model_id': '6020cbb6e9b1d60001aa019a', 'cv_averages': {'auc': 0.8474354399999999, 'mean_per_class_error': 0.19980182400000002, 'logloss': 0.44628763199999993, 'misclassification': 0.177834302, 'lift_top_group': 2.3412321}, 'validation_scores': {'auc': 0.7897872340425531, 'mean_per_class_error': 0.214468085106383, 'logloss': 0.518458817177171, 'misclassification': 0.19444444444444445, 'lift_top_group': 2.88}, 'feature_explanations': []}}\n",
+      "[{'key': 'Sex.female', 'value': 0.29175002502851016}, {'key': 'Sex.male', 'value': 0.189594654211086}, {'key': 'Fare', 'value': 0.11978921753372389}, {'key': 'Pclass.3.0', 'value': 0.09672863291509592}, {'key': 'Age', 'value': 0.0925635851776242}, {'key': 'PassengerId', 'value': 0.08413472769959315}, {'key': 'Cabin.missing(NA)', 'value': 0.03643535211761857}, {'key': 'Pclass.1.0', 'value': 0.02614734753691095}, {'key': 'SibSp', 'value': 0.02423284730791642}, {'key': 'Pclass.2.0', 'value': 0.01363608065980026}, {'key': 'Embarked.S', 'value': 0.00942793927081628}, {'key': 'Embarked.Q', 'value': 0.006903621306791802}, {'key': 'Parch', 'value': 0.006420487670606838}, {'key': 'Embarked.C', 'value': 0.0022354815639055396}]\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -434,12 +564,14 @@
        "[713 rows x 12 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "print(exp.get(attr='attributes')) # wait until train step is over\n",
+    "print(exp.best_model.get(attr='importances'))\n",
     "train_data.show_df()"
    ]
   },
