Update sample code to open file with byte mode

--- a/examples/jupyter_example.ipynb
+++ b/examples/jupyter_example.ipynb
@@ -128,8 +128,8 @@
     "# open train & test file\n",
     "train_file_path = os.path.join('data/train.csv')\n",
     "test_file_path = os.path.join('data/train.csv')\n",
-    "train_file = open(train_file_path , 'r')\n",
-    "test_file = open(test_file_path , 'r')\n",
+    "train_file = open(train_file_path , 'rb')\n",
+    "test_file = open(test_file_path , 'rb')\n",
     "\n",
     "# upload data to corex \n",
     "train_data = client.upload(file=train_file, name=\"train_data\", name='upload_train_data')\n",
