--- a/examples/jupyter_jobs_handle_example.ipynb
+++ b/examples/jupyter_jobs_handle_example.ipynb
@@ -47,8 +47,8 @@
    "source": [
     "train_file_path = 'data/train.csv'\n",
     "test_file_path = 'data/test.csv'\n",
-    "train_file = open(train_file_path , 'r')\n",
-    "test_file = open(test_file_path , 'r')"
+    "train_file = open(train_file_path , 'rb')\n",
+    "test_file = open(test_file_path , 'rb')"
    ]
   },
   {
@@ -117,7 +117,7 @@
    "metadata": {},
    "source": [
     "## Test dependency\n",
-    "Stop DataUpload, then the Xxperiemnt and predict depends on the data will fail. Test data will keep upload till it's done."
+    "Stop DataUpload, then the Experiemnt and predict depends on the data will fail. Test data will keep upload till it's done."
    ]
   },
   {
@@ -126,8 +126,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_file = open(train_file_path , 'r')\n",
-    "test_file = open(test_file_path, 'r')\n",
+    "train_file = open(train_file_path , 'rb')\n",
+    "test_file = open(test_file_path, 'rb')\n",
     "\n",
     "train_data = client.upload(file=train_file, name='upload_train_data')\n",
     "test_data = client.upload(file=test_file, name='upload_test_data')\n",
@@ -177,7 +177,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_file = open(train_file_path , 'r')\n",
+    "train_file = open(train_file_path , 'rb')\n",
     "\n",
     "train_data = client.upload(file=train_file, name='upload_train_data')\n",
     "train_input = TrainInput(data=train_data, target='Survived', algos=[Algo.XGBoost], max_model=2, tolerance=0.9)\n",
@@ -221,7 +221,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_file = open(train_file_path , 'r')\n",
+    "train_file = open(train_file_path , 'rb')\n",
     "\n",
     "train_data = client.upload(file=train_file, name='upload_train_data')\n",
     "\n",
