--- a/examples/jupyter_example.ipynb
+++ b/examples/jupyter_example.ipynb
@@ -112,7 +112,7 @@
    "source": [
     "# set the username, password, host\n",
     "decanter_ai_server=???\n",
-    "client = core.CoreClient(username='gp', password='gp-admin', host=decanter_ai_server)"
+    "client = core.CoreClient(username=???, password=???, host=decanter_ai_server)"
    ]
   },
   {
