--- a/examples/jupyter_jobs_handle_example.ipynb
+++ b/examples/jupyter_jobs_handle_example.ipynb
@@ -36,7 +36,7 @@
     "# The Main object handles the calling of Decanter's API.\n",
     "# Create connection to Decanter server, and set up basic settings.\n",
     "# set the username, password, host\n",
-    "client = core.CoreClient(username='gp', password='gp-admin', host='http://localhost:3000')"
+    "client = core.CoreClient(username=???, password=???, host=???)"
    ]
   },
   {
